Parse value of srcset attribute closer to specifications (#3301)
* Revert parsing srcset to previous regex method

* Add text for commas in url in srcset

* Add primitive solution to parse srcset

* Use example.com for comma in url test case

* Update packages/kit/src/core/adapt/prerender/crawl.js

* changeset

Co-authored-by: Rich Harris <hello@rich-harris.dev>

--- a/packages/kit/src/core/adapt/prerender/fixtures/basic-srcset/input.html
+++ b/packages/kit/src/core/adapt/prerender/fixtures/basic-srcset/input.html
@@ -5,7 +5,7 @@
 		<img
 			alt="A header"
 			src="header.png"
-			srcset="header640.png 640w, header960.png 960w, header1024.png 1024w, header.png"
+			srcset="https://example.com/w_200,q_100/header.png 200w, header640.png 640w, header960.png 960w, header1024.png 1024w, header.png"
 		/>
 	</body>
 </html>
