--- a/packages/kit/test/apps/amp/src/app.html
+++ b/packages/kit/test/apps/amp/src/app.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="canonical" href="https://example.com" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		%svelte.body%
+		%sveltekit.body%
 	</body>
 </html>
