docs: fix js and ts extension when TSToggle is active (#9486)
* docs: fix js and ts extension when TSToggle is active

* remove inline-flex

* simplify

* simplify

* exclude certain files/patterns

* deduplicate

* exclude .d.ts files

* simplify

---------

Co-authored-by: Rich Harris <git@rich-harris.dev>

--- a/sites/kit.svelte.dev/src/app.html
+++ b/sites/kit.svelte.dev/src/app.html
@@ -24,7 +24,7 @@
 				display: none;
 			}
 			.prefers-ts .ts-version {
-				display: block;
+				display: inline;
 			}
 			.no-js .ts-toggle {
 				display: none;
