site: fix copy button alignment (#10552)

--- a/sites/kit.svelte.dev/src/app.html
+++ b/sites/kit.svelte.dev/src/app.html
@@ -24,7 +24,7 @@
 				display: none;
 			}
 			body.prefers-ts .ts-version {
-				display: inline;
+				display: block;
 			}
 			.no-js .ts-toggle {
 				display: none;
