--- a/packages/kit/test/apps/amp/src/app.html
+++ b/packages/kit/test/apps/amp/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ⚡ lang="en">
+<html lang="en" amp>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
