--- a/sites/kit.svelte.dev/src/app.html
+++ b/sites/kit.svelte.dev/src/app.html
@@ -15,6 +15,13 @@
 		<meta name="twitter:image" content="/images/twitter-thumbnail.jpg" />
 		<meta name="og:image" content="/images/twitter-thumbnail.jpg" />
 
+		<link
+			rel="search"
+			type="application/opensearchdescription+xml"
+			href="/opensearch.xml"
+			title="SvelteKit"
+		/>
+
 		<!-- add inline style and blocking script to prevent content flash/jump -->
 		<style>
 			.ts-version {
